--- a/produkte.html
+++ b/produkte.html
@@ -28,50 +28,50 @@
             <div class="gallery">
              
                 <div class="gallery-item">
-                    <img src="image/foto1.jfif" alt="Nike Air Max">
+                    <img src="foto1.jfif" alt="Nike Air Max">
                     <p>Nike Air Max</p>
                     <p class="price">$120</p>
                     <a href="newcart.html"><button>Order</button></a>
                 </div>
                 <div class="gallery-item">
-                    <img src="image/foto2.jfif" alt="Adidas Ultraboost">
+                    <img src="foto2.jfif" alt="Adidas Ultraboost">
                     <p>Adidas Ultraboost</p>
                     <p class="price">$150</p>
                     <a href="newcart.html"><button>Order</button></a>
                 </div>
                 <div class="gallery-item">
-                    <img src="image/images.jfif" alt="Nike Court Vision">
+                    <img src="images.jfif" alt="Nike Court Vision">
                     <p>Nike Court Vision</p>
                     <p class="price">$90</p>
                     <a href="newcart.html"><button>Order</button></a>
                 </div>
                 <div class="gallery-item">
-                    <img src="image/foto4.webp" alt="Puma Classic">
+                    <img src="foto4.webp" alt="Puma Classic">
                     <p>Puma Classic</p>
                     <p class="price">$85</p>
                     <a href="newcart.html"><button>Order</button></a>
                 </div>
           
                 <div class="gallery-item">
-                    <img src="image/foto5.webp" alt="Product 1">
+                    <img src="foto5.webp" alt="Product 1">
                     <p>Product 1</p>
                     <p class="price">$100</p>
                     <a href="newcart.html"><button>Order</button></a>
                 </div>
                 <div class="gallery-item">
-                    <img src="image/foto3.jpg" alt="Product 2">
+                    <img src="foto3.jpg" alt="Product 2">
                     <p>Product 2</p>
                     <p class="price">$110</p>
                     <a href="newcart.html"><button>Order</button></a>
                 </div>
                 <div class="gallery-item">
-                    <img src="image/abc.jpg" alt="Product 3">
+                    <img src="abc.jpg" alt="Product 3">
                     <p>Product 3</p>
                     <p class="price">$95</p>
                     <a href="newcart.html"><button>Order</button></a>
                 </div>
                 <div class="gallery-item">
-                    <img src="image/foto.jfif" alt="Air Zoom Pegasus">
+                    <img src="foto.jfif" alt="Air Zoom Pegasus">
                     <p>Air Zoom Pegasus</p>
                     <p class="price">$130</p>
                     <a href="newcart.html"><button>Order</button></a>
